src/main/gen/io/github/riej/lsl/LslParser.java
// This is a generated file. Not intended for manual editing.
package io.github.riej.lsl;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.github.riej.lsl.psi.LslTypes.*;
import static io.github.riej.lsl.LslParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LslParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return LslScript(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ADD_EXPR, AND_EXPR, ASSIGN_EXPR, CALL_EXPR,
      CONDITIONAL_EXPR, CONVERSION_EXPR, EXPRESSION, LIST_EXPR,
      LITERAL, MUL_EXPR, OR_EXPR, PARENTHESES_EXPR,
      PRINT_EXPR, UNARY_EXPR, UNARY_POSTFIX_EXPR, VECTOR_OR_QUATERNION_EXPR),
  };

  /* ********************************************************** */
  // '+' | '-' | '|' | '^'
  static boolean AddOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AddOp")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, BITWISE_OR);
    if (!r) r = consumeToken(b, BITWISE_XOR);
    return r;
  }

  /* ********************************************************** */
  // TypeName Identifier
  public static boolean Argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = TypeName(b, l + 1);
    p = r; // pin = 1
    r = r && Identifier(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // Argument (',' Argument)*
  static boolean ArgumentsList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgumentsList")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = Argument(b, l + 1);
    p = r; // pin = 1
    r = r && ArgumentsList_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' Argument)*
  private static boolean ArgumentsList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgumentsList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ArgumentsList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArgumentsList_1", c)) break;
    }
    return true;
  }

  // ',' Argument
  private static boolean ArgumentsList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgumentsList_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && Argument(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '+=' | '-=' | '*=' | '/=' | '%=' | '='
  static boolean AssignOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignOp")) return false;
    boolean r;
    r = consumeToken(b, PLUS_ASSIGN);
    if (!r) r = consumeToken(b, MINUS_ASSIGN);
    if (!r) r = consumeToken(b, MULTIPLE_ASSIGN);
    if (!r) r = consumeToken(b, DIVIDE_ASSIGN);
    if (!r) r = consumeToken(b, MODULUS_ASSIGN);
    if (!r) r = consumeToken(b, ASSIGN);
    return r;
  }

  /* ********************************************************** */
  // BlockInner
  public static boolean Block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block")) return false;
    if (!nextTokenIs(b, BRACES_LEFT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BlockInner(b, l + 1);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  /* ********************************************************** */
  // '{' ('}' | (<<withOff Statements "COND" "PAR">> | (!() Statements)) '}')
  static boolean BlockInner(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockInner")) return false;
    if (!nextTokenIs(b, BRACES_LEFT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, BRACES_LEFT);
    p = r; // pin = 1
    r = r && BlockInner_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // '}' | (<<withOff Statements "COND" "PAR">> | (!() Statements)) '}'
  private static boolean BlockInner_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockInner_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACES_RIGHT);
    if (!r) r = BlockInner_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (<<withOff Statements "COND" "PAR">> | (!() Statements)) '}'
  private static boolean BlockInner_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockInner_1_1")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = BlockInner_1_1_0(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, BRACES_RIGHT);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // <<withOff Statements "COND" "PAR">> | (!() Statements)
  private static boolean BlockInner_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockInner_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = withOff(b, l + 1, LslParser::Statements, "COND", "PAR");
    if (!r) r = BlockInner_1_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !() Statements
  private static boolean BlockInner_1_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockInner_1_1_0_1")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = BlockInner_1_1_0_1_0(b, l + 1);
    p = r; // pin = 1
    r = r && Statements(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // !()
  private static boolean BlockInner_1_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockInner_1_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !BlockInner_1_1_0_1_0_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ()
  private static boolean BlockInner_1_1_0_1_0_0(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // '(' <<enterMode "COND">> Expression <<exitModeSafe "COND">> ')'
  static boolean Condition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Condition")) return false;
    if (!nextTokenIs(b, PARENTHESES_LEFT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARENTHESES_LEFT);
    r = r && enterMode(b, l + 1, "COND");
    r = r && Expression(b, l + 1, -1);
    r = r && exitModeSafe(b, l + 1, "COND");
    r = r && consumeToken(b, PARENTHESES_RIGHT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // string_value
  //     | float_value
  //     | hex_integer_value
  //     | integer_value
  public static boolean ConstantValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstantValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_VALUE, "<constant value>");
    r = consumeToken(b, STRING_VALUE);
    if (!r) r = consumeToken(b, FLOAT_VALUE);
    if (!r) r = consumeToken(b, HEX_INTEGER_VALUE);
    if (!r) r = consumeToken(b, INTEGER_VALUE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // default StateBody
  public static boolean DefaultStateDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefaultStateDeclaration")) return false;
    if (!nextTokenIs(b, DEFAULT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFAULT_STATE_DECLARATION, null);
    r = consumeToken(b, DEFAULT);
    p = r; // pin = 1
    r = r && StateBody(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // do Statement while Condition ';'
  public static boolean DoStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoStatement")) return false;
    if (!nextTokenIs(b, DO)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DO_STATEMENT, null);
    r = consumeToken(b, DO);
    p = r; // pin = 1
    r = r && report_error_(b, Statement(b, l + 1));
    r = p && report_error_(b, consumeToken(b, WHILE)) && r;
    r = p && report_error_(b, Condition(b, l + 1)) && r;
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // else Statement
  public static boolean ElseStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseStatement")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSE_STATEMENT, null);
    r = consumeToken(b, ELSE);
    p = r; // pin = 1
    r = r && Statement(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ExpressionWithRecover (',' ExpressionWithRecover)*
  static boolean ExpressionList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpressionList")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = ExpressionWithRecover(b, l + 1);
    p = r; // pin = 1
    r = r && ExpressionList_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' ExpressionWithRecover)*
  private static boolean ExpressionList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpressionList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ExpressionList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ExpressionList_1", c)) break;
    }
    return true;
  }

  // ',' ExpressionWithRecover
  private static boolean ExpressionList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpressionList_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && ExpressionWithRecover(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // !('!' | '%' | '&&' | '&' | '~' | '(' | ')' | '*' | '*=' | '+' | '++' | '+=' | ',' | '-' | '--' | '-=' | '/' | '/=' | ';' | '<' | '<<' | '<=' | '=' | '==' | '>' | '>=' | '>>' | '[' | ']' | '^' | '{' | '|' | '||' | '}' | '@' | if | for | while | do | state | jump | string_value | float_value | hex_integer_value | integer_value | raw_identifier)
  static boolean ExpressionListRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpressionListRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !ExpressionListRecover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '!' | '%' | '&&' | '&' | '~' | '(' | ')' | '*' | '*=' | '+' | '++' | '+=' | ',' | '-' | '--' | '-=' | '/' | '/=' | ';' | '<' | '<<' | '<=' | '=' | '==' | '>' | '>=' | '>>' | '[' | ']' | '^' | '{' | '|' | '||' | '}' | '@' | if | for | while | do | state | jump | string_value | float_value | hex_integer_value | integer_value | raw_identifier
  private static boolean ExpressionListRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpressionListRecover_0")) return false;
    boolean r;
    r = consumeToken(b, NOT);
    if (!r) r = consumeToken(b, MODULUS);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, BITWISE_AND);
    if (!r) r = consumeToken(b, BITWISE_NOT);
    if (!r) r = consumeToken(b, PARENTHESES_LEFT);
    if (!r) r = consumeToken(b, PARENTHESES_RIGHT);
    if (!r) r = consumeToken(b, MULTIPLE);
    if (!r) r = consumeToken(b, MULTIPLE_ASSIGN);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, PLUS_PLUS);
    if (!r) r = consumeToken(b, PLUS_ASSIGN);
    if (!r) r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, MINUS_MINUS);
    if (!r) r = consumeToken(b, MINUS_ASSIGN);
    if (!r) r = consumeToken(b, DIVIDE);
    if (!r) r = consumeToken(b, DIVIDE_ASSIGN);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, LESS);
    if (!r) r = consumeToken(b, SHIFT_LEFT);
    if (!r) r = consumeToken(b, LESS_EQ);
    if (!r) r = consumeToken(b, ASSIGN);
    if (!r) r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, GREATER);
    if (!r) r = consumeToken(b, GREATER_EQ);
    if (!r) r = consumeToken(b, SHIFT_RIGHT);
    if (!r) r = consumeToken(b, BRACKETS_LEFT);
    if (!r) r = consumeToken(b, BRACKETS_RIGHT);
    if (!r) r = consumeToken(b, BITWISE_XOR);
    if (!r) r = consumeToken(b, BRACES_LEFT);
    if (!r) r = consumeToken(b, BITWISE_OR);
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, BRACES_RIGHT);
    if (!r) r = consumeToken(b, LABEL);
    if (!r) r = consumeToken(b, IF);
    if (!r) r = consumeToken(b, FOR);
    if (!r) r = consumeToken(b, WHILE);
    if (!r) r = consumeToken(b, DO);
    if (!r) r = consumeToken(b, STATE);
    if (!r) r = consumeToken(b, JUMP);
    if (!r) r = consumeToken(b, STRING_VALUE);
    if (!r) r = consumeToken(b, FLOAT_VALUE);
    if (!r) r = consumeToken(b, HEX_INTEGER_VALUE);
    if (!r) r = consumeToken(b, INTEGER_VALUE);
    if (!r) r = consumeToken(b, RAW_IDENTIFIER);
    return r;
  }

  /* ********************************************************** */
  // ExpressionWithRecover ';'
  public static boolean ExpressionStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpressionStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_STATEMENT, "<expression statement>");
    r = ExpressionWithRecover(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Expression
  static boolean ExpressionWithRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpressionWithRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = Expression(b, l + 1, -1);
    exit_section_(b, l, m, r, false, LslParser::ExpressionListRecover);
    return r;
  }

  /* ********************************************************** */
  // for '(' ExpressionList? ';' ExpressionWithRecover? ';' ExpressionList ')' Statement
  public static boolean ForStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement")) return false;
    if (!nextTokenIs(b, FOR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FOR_STATEMENT, null);
    r = consumeTokens(b, 1, FOR, PARENTHESES_LEFT);
    p = r; // pin = 1
    r = r && report_error_(b, ForStatement_2(b, l + 1));
    r = p && report_error_(b, consumeToken(b, SEMICOLON)) && r;
    r = p && report_error_(b, ForStatement_4(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, SEMICOLON)) && r;
    r = p && report_error_(b, ExpressionList(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, PARENTHESES_RIGHT)) && r;
    r = p && Statement(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ExpressionList?
  private static boolean ForStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_2")) return false;
    ExpressionList(b, l + 1);
    return true;
  }

  // ExpressionWithRecover?
  private static boolean ForStatement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_4")) return false;
    ExpressionWithRecover(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // TypeName? Identifier '(' ArgumentsList? ')' Block
  public static boolean FunctionDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_DECLARATION, "<function declaration>");
    r = FunctionDeclaration_0(b, l + 1);
    r = r && Identifier(b, l + 1);
    r = r && consumeToken(b, PARENTHESES_LEFT);
    r = r && FunctionDeclaration_3(b, l + 1);
    r = r && consumeToken(b, PARENTHESES_RIGHT);
    r = r && Block(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // TypeName?
  private static boolean FunctionDeclaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclaration_0")) return false;
    TypeName(b, l + 1);
    return true;
  }

  // ArgumentsList?
  private static boolean FunctionDeclaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionDeclaration_3")) return false;
    ArgumentsList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // GlobalVariableDeclaration | FunctionDeclaration
  static boolean GlobalDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GlobalDeclaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = GlobalVariableDeclaration(b, l + 1);
    if (!r) r = FunctionDeclaration(b, l + 1);
    exit_section_(b, l, m, r, false, LslParser::GlobalDeclarationRecover);
    return r;
  }

  /* ********************************************************** */
  // !(TypeName | raw_identifier | default | ';')
  static boolean GlobalDeclarationRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GlobalDeclarationRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !GlobalDeclarationRecover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // TypeName | raw_identifier | default | ';'
  private static boolean GlobalDeclarationRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GlobalDeclarationRecover_0")) return false;
    boolean r;
    r = TypeName(b, l + 1);
    if (!r) r = consumeToken(b, RAW_IDENTIFIER);
    if (!r) r = consumeToken(b, DEFAULT);
    if (!r) r = consumeToken(b, SEMICOLON);
    return r;
  }

  /* ********************************************************** */
  // TypeName Identifier ('=' Expression)? ';'
  public static boolean GlobalVariableDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GlobalVariableDeclaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GLOBAL_VARIABLE_DECLARATION, "<global variable declaration>");
    r = TypeName(b, l + 1);
    r = r && Identifier(b, l + 1);
    r = r && GlobalVariableDeclaration_2(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('=' Expression)?
  private static boolean GlobalVariableDeclaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GlobalVariableDeclaration_2")) return false;
    GlobalVariableDeclaration_2_0(b, l + 1);
    return true;
  }

  // '=' Expression
  private static boolean GlobalVariableDeclaration_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GlobalVariableDeclaration_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSIGN);
    r = r && Expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // raw_identifier
  public static boolean Identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier")) return false;
    if (!nextTokenIs(b, RAW_IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RAW_IDENTIFIER);
    exit_section_(b, m, IDENTIFIER, r);
    return r;
  }
